# brasilprev-examination

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/models/: board.py  player.py  property.py
src/services/: board.py  game.py  metrics.py  simulation.py
src/tests/models/: test_board.py  test_player.py  test_property.py
src/tests/services/: test_board.py  test_metrics.py  test_simulation.py
