[tool.poetry]
name = "brasilprev-examination"
version = "0.1.0"
description = "Brasilprev - Banco Imobiliário"
authors = ["Pedro Santana <pedro.santana@ilia.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
