[tool.poetry]
name = "brasilprev-examination"
version = "0.1.0"
description = "Brasilprev - Banco Imobiliário"
authors = ["Pedro Santana <pedro.santana@ilia.digital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
